[project]
name = "doc-to-image"
version = "0.1.0"
description = "Convert PDF and DOCX documents to per-page PNG images. CLI for Emergent agents."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Emergent", email = "hey@emergent.sh" }]
license = { text = "Proprietary" }
dependencies = [
    "typer>=0.12",
    "pymupdf>=1.24",
]

# DOCX rendering uses aspose-words, which only ships wheels for x86_64 Linux,
# x86_64 macOS, ARM64 macOS, and Windows. On Linux aarch64 (the common pod
# arch) install would fail outright, so it's an opt-in extra. Without it,
# the CLI still works for PDF; DOCX returns a clear "aspose-words not
# installed" error at runtime.
[project.optional-dependencies]
docx = ["aspose-words>=24.0"]

[project.scripts]
doc-to-image = "doc_to_image.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/doc_to_image"]
