[project]
name = "doc-to-image"
version = "0.1.0"
description = "Convert PDF documents to per-page PNG images. CLI for Emergent agents."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Emergent", email = "hey@emergent.sh" }]
license = { text = "Proprietary" }
dependencies = [
    "typer>=0.12",
    "pymupdf>=1.24",
]

[project.scripts]
doc-to-image = "doc_to_image.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/doc_to_image"]
